force-app/main/default/objects/Auto_Call_Back_Users__c/Auto_Call_Back_Users__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Auto Call Back Users</label>
</CustomObject>