force-app/main/default/objects/Auto_Call_Back_Users__c/fields/Primary_User_Ids__c.field-meta.xml
<CustomField>
    <fullName>Primary_User_Ids__c</fullName>
    <label>Primary User Ids</label>
    <type>TextArea</type>
</CustomField>