force-app/main/default/objects/Auto_Call_Back_Users__c/fields/Secondary_User_Ids__c.field-meta.xml
<CustomField>
    <fullName>Secondary_User_Ids__c</fullName>
    <label>Secondary User Ids</label>
    <type>TextArea</type>
</CustomField>